# jarm-c

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
src/: config.h  main.c
src/cli/: Cli.c  Cli.h  conscodes.h
src/logic/: GameLogic.c  GameLogic.h
